Combine ktis and kcl into single plot with alpha set to 0.5

--- a/text/supplemental_methods.Rmd
+++ b/text/supplemental_methods.Rmd
@@ -268,17 +268,25 @@ cat("\\newpage")
 
 #### Figure SM3
 
-```{r sm3, fig.height=3}
-pritis = ggplot(data.frame(x=0:30),aes(x)) + stat_function(fun=function(x) dgamma(x,1.2,.2),geom="area",fill="#666699")+
-  labs(title=expression(paste("Prior for k"["tis"])),x=expression(paste("k"["tis"])), y = "Probability Density") +
+```{r sm3, fig.height=3, fig.width=3}
+ggplot(data.frame(x=0:30),aes(x)) + 
+  stat_function(fun=function(x) dgamma(x,1.2,.2),geom="area", aes(fill = "ktis"))+ 
+  stat_function(fun=function(x) dgamma(x,3.5,2.5),geom="area", aes(fill = "kcl"))+ 
+  labs(title=expression(paste("Prior for k"["tis"], "and k"["cl"])),x= "k value", y = "Probability Density") +
   theme_classic() + scale_x_continuous(limits = c(0, 20), breaks = c(seq(0,20, by =5))) +
-  scale_y_continuous(limits = c(0,0.75), breaks = c(seq(0,0.75, by = 0.25))) + theme(title = element_text(size = 10))
-
-pricl = ggplot(data.frame(x=0:30),aes(x)) + stat_function(fun=function(x) dgamma(x,3.5,2.5),geom="area",fill="#666699")+
-  labs(title=expression(paste("Prior for k"["class"])),x=expression(paste("k"["cl"])), y = "Probability Density") +
-  theme_classic() + scale_x_continuous(limits = c(0, 20), breaks = c(seq(0,20, by =5))) +
-  scale_y_continuous(limits = c(0,0.75), breaks = c(seq(0,0.75, by = 0.25))) + theme(title = element_text(size = 10))
-print(pritis+pricl)
+  scale_y_continuous(limits = c(0,0.75), breaks = c(seq(0,0.75, by = 0.25))) +
+  scale_fill_manual(values = c(alpha("#E69F00", 0.5),alpha("#0072B2", 0.5)),
+                    labels = c(expression(paste("k"["cl"])), expression(paste("k"["tis"])))) +
+  theme(plot.title = element_text(size = 12, hjust = 0.5),
+        panel.grid.major = element_line(size = 0.75),
+        panel.grid.minor = element_line(),
+        legend.position = c(0.8, 0.8),
+        legend.spacing.y = unit(0, "mm"),
+        legend.title = element_blank(),
+        legend.text = element_text(size = 8),
+        legend.key.size = unit(0.75,"line"),
+        legend.background = element_blank(),
+        legend.box.background = element_rect(colour = "black"))
 ```
 
 **Supplementary Figure SM3: Priors for the tissue and class coefficients.** The tissue coefficient
@@ -289,6 +297,9 @@ multiplies the tissue k and is given a peak density at 1, and a
 credible range from near 0 to 5, reflecting our expectation of a
 moderate amount of variation across the classes.
 
+```{r, results='asis'}
+cat("\\newpage")
+```
 
 As an aside, we did not explicitly account for stage at diagnosis in our model
 for the following reasons. In the tumor sample data, stage at diagnosis is
